
(84) Fixed the 'ptr + len' problem in freeglut_misc.c:90


*******************************************************************************************
* Changes on 02 July 2003
*******************************************************************************************

(85) Removed genfonts/genstrokes code, updated configure.in and Makefile.in

(86) Moved tests/one.c into progs/demos/One/one.c, updated configure.in and Makefile.in

(87) Removed tests directory


*******************************************************************************************
* Changes on 03 July 2003
*******************************************************************************************

(88) Removed unused char *ptr from freeglut_misc.c

*******************************************************************************************
* Changes on 17 July 2003
*******************************************************************************************

(89) Changed the overlay (freeglut_state.c:662) to return FALSE, as it's not implemented yet.

(90) Applied John F. Fay's fixes to freeglut.dsp and freeglut_static.dsp


*******************************************************************************************
* Changes on 21 July 2003
*******************************************************************************************

(91) src/Makefile.am:38  Changed versioning to 11:0:8 thanks to Bernhard Kaindl


*******************************************************************************************
* Changes on 22 July 2003
*******************************************************************************************

(92) freeglut.lsm:3  Removed 'beta' label for next release, thanks to Bernhard Kaindl.


*******************************************************************************************
* Changes on 23 July 2003
*******************************************************************************************

(93) doc/Makefile.am:4  Removed trailing backslash and added an empty last line